# YAVE

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  install.sh
.github/workflows/: clang-format.yml  cmake.yml
apps/: CMakeLists.txt  gltf_model.cpp  gltf_model.h  primitives.cpp  primitives.h  wave_demo.cpp  wave_demo.h
cmake/: library.cmake  targets.cmake
conan/recipes/shaderc/all/: conandata.yml  conanfile.py  resources.cc
conan/recipes/shaderc/all/patches/: resources_cc.patch
libs/: CMakeLists.txt
libs/ibl/: CMakeLists.txt  ibl.cpp  ibl.h  prefilter.cpp  prefilter.h
libs/image_utils/: CMakeLists.txt  cubemap.cpp  cubemap.h  noise_generator.cpp  noise_generator.h
libs/model_parser/: CMakeLists.txt
libs/model_parser/gltf/: gltf_model.cpp  gltf_model.h  model_material.cpp  model_material.h  model_mesh.cpp  model_mesh.h  node_instance.cpp  node_instance.h  skin_instance.cpp  skin_instance.h
libs/utility/: CMakeLists.txt  aligned_alloc.h  assertion.cpp  assertion.h  bitset_enum.h  colour.h  compiler.h  cstring.cpp  cstring.h  enum_cast.h  handle.h  logger.h  maths.h  murmurhash.h  timer.h
libs/utility/src/utility/: aligned_alloc.h  assertion.cpp  bitset_enum.h  colour.h  compiler.h  cstring.cpp  cstring.h  handle.h  logger.h  maths.h  soa.h  timer.h
libs/utility/test/: cstring_test.cpp  soa_test.cpp
libs/yave_app/: CMakeLists.txt  app.cpp  app.h  asset_loader.cpp  asset_loader.h  camera_view.cpp  camera_view.h  imgui_helper.cpp  imgui_helper.h  models.cpp  models.h  window.cpp  window.h
shaders/: average_lum.comp  fft_butterfly.comp  fft_displacement.comp  fft_horiz.comp  fft_spectrum.comp  fft_vert.comp  generate_maps.comp  initial_spectrum.comp  lighting.frag  lighting.vert  luminance.comp  material.frag  material.tessc  material.tesse  material.vert  post_process.frag  post_process.vert
shaders/include/: complex.h  lights.h  math.h  pbr.h  random.h
shaders/materials/: bloom.glsl  brdf.glsl  default.glsl  eqirect_to_cubemap.glsl  irradiance.glsl  skybox.glsl  specular.glsl  ui.glsl  water.glsl
vulkan-api/: CMakeLists.txt
vulkan-api/src/backend/: convert_to_vk.cpp  convert_to_vk.h  convert_to_yave.cpp  convert_to_yave.h  enums.h
vulkan-api/src/vulkan-api/: buffer.cpp  buffer.h  commands.cpp  commands.h  common.cpp  common.h  context.cpp  context.h  driver.cpp  driver.h  framebuffer_cache.cpp  framebuffer_cache.h  garbage_collector.cpp  garbage_collector.h  image.cpp  image.h  pipeline.cpp  pipeline.h  pipeline_cache.cpp  pipeline_cache.h  program_manager.cpp  program_manager.h  renderpass.cpp  renderpass.h  resource_cache.cpp  resource_cache.h  sampler_cache.cpp  sampler_cache.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utility.cpp  utility.h
vulkan-api/test/: test_program_manager.cpp  vulkan_helper.h
yave/: CMakeCache.txt  CMakeLists.txt
yave/include/yave/: camera.h  engine.h  index_buffer.h  indirect_light.h  light_manager.h  material.h  object.h  object_manager.h  options.h  render_primitive.h  renderable.h  renderable_manager.h  renderer.h  scene.h  skybox.h  texture.h  texture_sampler.h  transform_manager.h  vertex_buffer.h  wave_generator.h  yave_api.h
yave/src/: aabox.h  camera.cpp  camera.h  colour_pass.cpp  colour_pass.h  compute.cpp  compute.h  engine.cpp  engine.h  frustum.cpp  frustum.h  index_buffer.cpp  index_buffer.h  indirect_light.cpp  indirect_light.h  light_manager.cpp  mapped_texture.cpp  mapped_texture.h  material.cpp  material.h  object_handle.h  object_instance.cpp  object_instance.h  object_manager.cpp  object_manager.h  post_process.cpp  post_process.h  render_primitive.cpp  render_primitive.h  render_queue.cpp  render_queue.h  renderable.cpp  renderable.h  renderable_manager.cpp  renderer.cpp  renderer.h  samplerset.cpp  samplerset.h  scene.cpp  scene.h  (+12 more)
yave/src/managers/: component_manager.cpp  component_manager.h  light_manager.cpp  light_manager.h  renderable_manager.cpp  renderable_manager.h  transform_manager.cpp  transform_manager.h
yave/src/private/: camera.cpp  camera.h  colour_pass.h  engine.cpp  engine.h  frustum.cpp  index_buffer.cpp  index_buffer.h  indirect_light.cpp  indirect_light.h  mapped_texture.cpp  mapped_texture.h  material.cpp  material.h  object_manager.cpp  object_manager.h  post_process.cpp  render_primitive.cpp  render_primitive.h  render_queue.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_ubo.cpp  skybox.cpp  skybox.h  uniform_buffer.cpp  vertex_buffer.cpp  vertex_buffer.h  wave_generator.cpp  wave_generator.h
yave/src/private/managers/: component_manager.cpp  component_manager.h  light_manager.cpp  light_manager.h  renderable_manager.cpp  renderable_manager.h  transform_manager.cpp  transform_manager.h
yave/src/private/render_graph/: backboard.h  dependency_graph.cpp  dependency_graph.h  index_buffer.cpp  index_buffer.h  indirect_light.cpp  material.h  object_instance.h  object_manager.cpp  object_manager.h  render_graph.cpp  render_graph_builder.h  render_pass_node.cpp  renderer.h  rendergraph_resource.h  resource_node.cpp  resources.cpp  resources.h
yave/src/render_graph/: backboard.cpp  backboard.h  dependency_graph.cpp  dependency_graph.h  render_graph.cpp  render_graph.h  render_graph_builder.cpp  render_graph_builder.h  render_graph_handle.h  render_graph_pass.h  render_pass_node.cpp  render_pass_node.h  rendergraph_resource.cpp  rendergraph_resource.h  resource_node.cpp  resource_node.h  resources.cpp  resources.h
yave/test/: test_compute.cpp  test_uniform_buffer.cpp  vulkan_helper.h
